# multi_robot_supervision

./: .gitignore  .gitmodules  CLAUDE.md  DEVELOPMENT_SPEC.md  README.md  docker-compose.yaml  setup_test.sh
central_server/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
central_server_go/: Dockerfile  config.yaml  go.mod  go.sum
central_server_go/certs/: ca.key  generate.sh  server.crt  server.key
central_server_go/scripts/: generate_proto.sh
docs/: GRAPH_ARCHITECTURE.md  multi-agent-simultaneous-start.md
docs/neo4j/: retention.cypher  schema.cypher
examples/task_distributor_profiles/: realtime_cnc01_quickstart.json  realtime_cnc_starter.json  worker_slot_charge_leave_charger_profile.json  worker_slot_charge_reserved_handoff_profile.json  worker_slot_charge_standby_profile.json  worker_slot_realtime_profile.json
fleet_agent_cpp/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  package.xml
fleet_agent_cpp/certs/: ca.crt
fleet_agent_cpp/config/: agent.example.yaml  agent.yaml
fleet_agent_cpp/include/fleet_agent/: agent.hpp
fleet_agent_cpp/include/fleet_agent/capability/: scanner.hpp  schema_extractor.hpp  type_loader.hpp
fleet_agent_cpp/include/fleet_agent/core/: agent_id_storage.hpp  config.hpp  config_loader.hpp  logger.hpp  shutdown.hpp  types.hpp
fleet_agent_cpp/include/fleet_agent/executor/: action_executor.hpp  command_processor.hpp  dynamic_action_client.hpp  precondition.hpp  task_log_sender.hpp  typed_action_client.hpp
fleet_agent_cpp/include/fleet_agent/graph/: executor.hpp  field_source.hpp  storage.hpp
fleet_agent_cpp/include/fleet_agent/protocol/: message_handler.hpp
fleet_agent_cpp/include/fleet_agent/state/: graph_state.hpp  state_definition.hpp  state_tracker.hpp
fleet_agent_cpp/include/fleet_agent/telemetry/: aggregator.hpp  collector.hpp  snapshot.hpp
fleet_agent_cpp/include/fleet_agent/transport/: persistent_queue.hpp  quic_outbound_sender.hpp  quic_transport.hpp  tls_credentials.hpp
fleet_agent_cpp/launch/: fleet_agent.launch.py
fleet_agent_cpp/proto/fleet/v1/: commands.proto  common.proto  graphs.proto  service.proto
fleet_agent_cpp/src/: agent.cpp  main.cpp  test_dynamic_action.cpp
fleet_agent_cpp/src/capability/: scanner.cpp  schema_extractor.cpp  type_loader.cpp
fleet_agent_cpp/src/core/: agent_id_storage.cpp  config_loader.cpp  logger.cpp  shutdown.cpp
fleet_agent_cpp/src/executor/: action_executor.cpp  command_processor.cpp  dynamic_action_client.cpp  precondition.cpp  task_log_sender.cpp
fleet_agent_cpp/src/graph/: executor.cpp  storage.cpp
fleet_agent_cpp/src/protocol/: message_handler.cpp
fleet_agent_cpp/src/state/: graph_state.cpp  state_definition.cpp  state_tracker.cpp
fleet_agent_cpp/src/telemetry/: aggregator.cpp  collector.cpp
fleet_agent_cpp/src/transport/: persistent_queue.cpp  quic_outbound_sender.cpp  quic_transport.cpp  tls_credentials.cpp
ros2_robot_agent/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  package.xml
ros2_robot_agent/certs/: agent.crt  agent.key
ros2_robot_agent/config/: agent.example.yaml  agent.yaml
ros2_robot_agent/include/robot_agent/: agent.hpp
ros2_robot_agent/include/robot_agent/capability/: capability_scanner_adapter.hpp  scanner.hpp  schema_extractor.hpp  type_loader.hpp
ros2_robot_agent/include/robot_agent/core/: agent_id_storage.hpp  config.hpp  config_loader.hpp  logger.hpp  shutdown.hpp  types.hpp
ros2_robot_agent/include/robot_agent/executor/: action_executor.hpp  command_processor.hpp  dynamic_action_client.hpp  precondition.hpp  ros2_action_executor.hpp  task_executor.hpp  task_log_sender.hpp  typed_action_client.hpp
ros2_robot_agent/include/robot_agent/factory/: agent_factory.hpp
ros2_robot_agent/include/robot_agent/graph/: executor.hpp  field_source.hpp  storage.hpp
ros2_robot_agent/include/robot_agent/interfaces/: action_executor.hpp  capability_scanner.hpp  transport.hpp
ros2_robot_agent/include/robot_agent/protocol/: message_handler.hpp
ros2_robot_agent/include/robot_agent/state/: graph_state.hpp  state_definition.hpp  state_tracker.hpp
ros2_robot_agent/include/robot_agent/telemetry/: aggregator.hpp  collector.hpp  snapshot.hpp
ros2_robot_agent/include/robot_agent/transport/: persistent_queue.hpp  quic_outbound_sender.hpp  quic_transport.hpp  quic_transport_adapter.hpp  tls_credentials.hpp
ros2_robot_agent/launch/: robot_agent.launch.py
ros2_robot_agent/proto/fleet/v1/: service.proto
ros2_robot_agent/src/: agent.cpp  main.cpp  test_dynamic_action.cpp
ros2_robot_agent/src/capability/: capability_scanner_adapter.cpp  scanner.cpp  schema_extractor.cpp  type_loader.cpp
ros2_robot_agent/src/core/: agent_id_storage.cpp  config_loader.cpp  logger.cpp  shutdown.cpp
ros2_robot_agent/src/executor/: action_executor.cpp  command_processor.cpp  dynamic_action_client.cpp  precondition.cpp  ros2_action_executor.cpp  task_executor.cpp  task_log_sender.cpp
ros2_robot_agent/src/factory/: agent_factory.cpp
ros2_robot_agent/src/graph/: executor.cpp  storage.cpp
ros2_robot_agent/src/protocol/: message_handler.cpp
ros2_robot_agent/src/state/: graph_state.cpp  state_definition.cpp  state_tracker.cpp
ros2_robot_agent/src/telemetry/: aggregator.cpp  collector.cpp
ros2_robot_agent/src/transport/: persistent_queue.cpp  quic_outbound_sender.cpp  quic_transport.cpp  quic_transport_adapter.cpp  tls_credentials.cpp
scripts/: dev.sh  dev_local.sh  env_local.sh  migrate_action_graphs.py  reset_agent.sh  reset_neo4j.sh  run_client.sh  run_server.sh  run_test.sh  start.sh  start_backend.sh  start_frontend.sh  status.sh  stop.sh  stop_server.sh  test_capability_api.sh  test_graph_api.sh  test_local.sh  test_start.sh
test_action_server/: CMakeLists.txt  README.md  package.xml
test_action_server/action/: TestAction.action
test_action_server/launch/: test_servers.launch.py
test_action_server/scripts/: auto_activate.py  test_a_server.py  test_b_server.py  test_c_server.py
test_telemetry_node/: CMakeLists.txt  package.xml
(+118 files in other folders)
