<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_agent_cpp</name>
  <version>1.0.0</version>
  <description>
    C++ Fleet Agent for Multi-Robot Supervision System.
    Manages multiple robots via ROS2, communicates with central server
    via QUIC (MsQuic).
  </description>

  <maintainer email="fleet@example.com">Fleet Team</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/example/multi-robot-supervision</url>
  <url type="repository">https://github.com/example/multi-robot-supervision</url>

  <author email="fleet@example.com">Fleet Team</author>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>

  <!-- Build dependencies (C++ libraries) -->
  <build_depend>protobuf-dev</build_depend>
  <build_depend>libgrpc++-dev</build_depend>
  <build_depend>libtbb-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libyaml-cpp-dev</build_depend>
  <build_depend>libspdlog-dev</build_depend>
  <build_depend>nlohmann-json3-dev</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>libprotobuf</exec_depend>
  <exec_depend>libgrpc++</exec_depend>
  <exec_depend>libtbb</exec_depend>
  <exec_depend>libssl</exec_depend>
  <exec_depend>libyaml-cpp</exec_depend>
  <exec_depend>libspdlog</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
